crates/galera-core/tests/snapshots/fixtures__denso.snap
---
source: crates/galera-core/tests/fixtures.rs
expression: code
---
// Generado por Galera a partir de document.json.
// No editar a mano: este archivo se reescribe entero en cada compilación.
#set document(title: "Documento denso")
#set page(width: 210mm, height: 297mm, margin: 0pt)

// p1
#place(top + left, dx: 20mm, dy: 20mm)[#block(width: 170mm, { set text(font: "Inter", size: 18pt, fill: rgb("#1F2733")); set par(leading: 0.65em); align(left)[#strong[Sección 1]] })] <el-titulo-1>
#place(top + left, dx: 20mm, dy: 35mm)[#block(width: 170mm, { set text(font: "Inter", size: 11pt, fill: rgb("#1F2733")); set par(leading: 0.65em, justify: true); align(left)[Informe anual, página 1#parbreak();La cooperativa agrícola del este cerró el ejercicio con una cosecha de trigo y cebada por encima de la media de los últimos cinco años, con un rendimiento medio de cuatro mil kilos por hectárea en secano y de seis mil en regadío. El consejo rector aprobó repartir el excedente entre las socias en proporción a las entregas, reservar una parte para renovar la maquinaria de la planta de selección y dejar el resto en el fondo de garantía. La cooperativa agrícola del este cerró el ejercicio con una cosecha de trigo y cebada por encima de la media de los últimos cinco años, con un rendimiento medio de cuatro mil kilos por hectárea en secano y de seis mil en regadío. El consejo rector aprobó repartir el excedente entre las socias en proporción a las entregas, reservar una parte para renovar la maquinaria de la planta de selección y dejar el resto en el fondo de garantía. La cooperativa agrícola del este cerró el ejercicio con una cosecha de trigo y cebada por encima de la media de los últimos cinco años, con un rendimiento medio de cuatro mil kilos por hectárea en secano y de seis mil en regadío. El consejo rector aprobó repartir el excedente entre las socias en proporción a las entregas, reservar una parte para renovar la maquinaria de la planta de selección y dejar el resto en el fondo de garantía. La cooperativa agrícola del este cerró el ejercicio con una cosecha de trigo y cebada por encima de la media de los últimos cinco años, con un rendimiento medio de cuatro mil kilos por hectárea en secano y de seis mil en regadío. El consejo rector aprobó repartir el excedente entre las socias en proporción a las entregas, reservar una parte para renovar la maquinaria de la planta de selección y dejar el resto en el fondo de garantía. La cooperativa agrícola del este cerró el ejercicio con una cosecha de trigo y cebada por encima de la media de los últimos cinco años, con un rendimiento medio de cuatro mil kilos por hectárea en secano y de seis mil en regadío. El consejo rector aprobó repartir el excedente entre las socias en proporción a las entregas, reservar una parte para renovar la maquinaria de la planta de selección y dejar el resto en el fondo de garantía.] })] <el-cuerpo-1>

#pagebreak()

// p2
#place(top + left, dx: 20mm, dy: 20mm)[#block(width: 170mm, { set text(font: "Inter", size: 18pt, fill: rgb("#1F2733")); set par(leading: 0.65em); align(left)[#strong[Sección 2]] })] <el-titulo-2>
#place(top + left, dx: 20mm, dy: 35mm)[#block(width: 170mm, { set text(font: "Inter", size: 11pt, fill: rgb("#1F2733")); set par(leading: 0.65em, justify: true); align(left)[Informe anual, página 2#parbreak();La cooperativa agrícola del este cerró el ejercicio con una cosecha de trigo y cebada por encima de la media de los últimos cinco años, con un rendimiento medio de cuatro mil kilos por hectárea en secano y de seis mil en regadío. El consejo rector aprobó repartir el excedente entre las socias en proporción a las entregas, reservar una parte para renovar la maquinaria de la planta de selección y dejar el resto en el fondo de garantía. La cooperativa agrícola del este cerró el ejercicio con una cosecha de trigo y cebada por encima de la media de los últimos cinco años, con un rendimiento medio de cuatro mil kilos por hectárea en secano y de seis mil en regadío. El consejo rector aprobó repartir el excedente entre las socias en proporción a las entregas, reservar una parte para renovar la maquinaria de la planta de selección y dejar el resto en el fondo de garantía. La cooperativa agrícola del este cerró el ejercicio con una cosecha de trigo y cebada por encima de la media de los últimos cinco años, con un rendimiento medio de cuatro mil kilos por hectárea en secano y de seis mil en regadío. El consejo rector aprobó repartir el excedente entre las socias en proporción a las entregas, reservar una parte para renovar la maquinaria de la planta de selección y dejar el resto en el fondo de garantía. La cooperativa agrícola del este cerró el ejercicio con una cosecha de trigo y cebada por encima de la media de los últimos cinco años, con un rendimiento medio de cuatro mil kilos por hectárea en secano y de seis mil en regadío. El consejo rector aprobó repartir el excedente entre las socias en proporción a las entregas, reservar una parte para renovar la maquinaria de la planta de selección y dejar el resto en el fondo de garantía. La cooperativa agrícola del este cerró el ejercicio con una cosecha de trigo y cebada por encima de la media de los últimos cinco años, con un rendimiento medio de cuatro mil kilos por hectárea en secano y de seis mil en regadío. El consejo rector aprobó repartir el excedente entre las socias en proporción a las entregas, reservar una parte para renovar la maquinaria de la planta de selección y dejar el resto en el fondo de garantía.] })] <el-cuerpo-2>

#pagebreak()

// p3
#place(top + left, dx: 20mm, dy: 20mm)[#block(width: 170mm, { set text(font: "Inter", size: 18pt, fill: rgb("#1F2733")); set par(leading: 0.65em); align(left)[#strong[Sección 3]] })] <el-titulo-3>
#place(top + left, dx: 20mm, dy: 35mm)[#block(width: 170mm, { set text(font: "Inter", size: 11pt, fill: rgb("#1F2733")); set par(leading: 0.65em, justify: true); align(left)[Informe anual, página 3#parbreak();La cooperativa agrícola del este cerró el ejercicio con una cosecha de trigo y cebada por encima de la media de los últimos cinco años, con un rendimiento medio de cuatro mil kilos por hectárea en secano y de seis mil en regadío. El consejo rector aprobó repartir el excedente entre las socias en proporción a las entregas, reservar una parte para renovar la maquinaria de la planta de selección y dejar el resto en el fondo de garantía. La cooperativa agrícola del este cerró el ejercicio con una cosecha de trigo y cebada por encima de la media de los últimos cinco años, con un rendimiento medio de cuatro mil kilos por hectárea en secano y de seis mil en regadío. El consejo rector aprobó repartir el excedente entre las socias en proporción a las entregas, reservar una parte para renovar la maquinaria de la planta de selección y dejar el resto en el fondo de garantía. La cooperativa agrícola del este cerró el ejercicio con una cosecha de trigo y cebada por encima de la media de los últimos cinco años, con un rendimiento medio de cuatro mil kilos por hectárea en secano y de seis mil en regadío. El consejo rector aprobó repartir el excedente entre las socias en proporción a las entregas, reservar una parte para renovar la maquinaria de la planta de selección y dejar el resto en el fondo de garantía. La cooperativa agrícola del este cerró el ejercicio con una cosecha de trigo y cebada por encima de la media de los últimos cinco años, con un rendimiento medio de cuatro mil kilos por hectárea en secano y de seis mil en regadío. El consejo rector aprobó repartir el excedente entre las socias en proporción a las entregas, reservar una parte para renovar la maquinaria de la planta de selección y dejar el resto en el fondo de garantía. La cooperativa agrícola del este cerró el ejercicio con una cosecha de trigo y cebada por encima de la media de los últimos cinco años, con un rendimiento medio de cuatro mil kilos por hectárea en secano y de seis mil en regadío. El consejo rector aprobó repartir el excedente entre las socias en proporción a las entregas, reservar una parte para renovar la maquinaria de la planta de selección y dejar el resto en el fondo de garantía.] })] <el-cuerpo-3>

#pagebreak()

// p4
#place(top + left, dx: 20mm, dy: 20mm)[#block(width: 170mm, { set text(font: "Inter", size: 18pt, fill: rgb("#1F2733")); set par(leading: 0.65em); align(left)[#strong[Sección 4]] })] <el-titulo-4>
#place(top + left, dx: 20mm, dy: 35mm)[#block(width: 170mm, { set text(font: "Inter", size: 11pt, fill: rgb("#1F2733")); set par(leading: 0.65em, justify: true); align(left)[Informe anual, página 4#parbreak();La cooperativa agrícola del este cerró el ejercicio con una cosecha de trigo y cebada por encima de la media de los últimos cinco años, con un rendimiento medio de cuatro mil kilos por hectárea en secano y de seis mil en regadío. El consejo rector aprobó repartir el excedente entre las socias en proporción a las entregas, reservar una parte para renovar la maquinaria de la planta de selección y dejar el resto en el fondo de garantía. La cooperativa agrícola del este cerró el ejercicio con una cosecha de trigo y cebada por encima de la media de los últimos cinco años, con un rendimiento medio de cuatro mil kilos por hectárea en secano y de seis mil en regadío. El consejo rector aprobó repartir el excedente entre las socias en proporción a las entregas, reservar una parte para renovar la maquinaria de la planta de selección y dejar el resto en el fondo de garantía. La cooperativa agrícola del este cerró el ejercicio con una cosecha de trigo y cebada por encima de la media de los últimos cinco años, con un rendimiento medio de cuatro mil kilos por hectárea en secano y de seis mil en regadío. El consejo rector aprobó repartir el excedente entre las socias en proporción a las entregas, reservar una parte para renovar la maquinaria de la planta de selección y dejar el resto en el fondo de garantía. La cooperativa agrícola del este cerró el ejercicio con una cosecha de trigo y cebada por encima de la media de los últimos cinco años, con un rendimiento medio de cuatro mil kilos por hectárea en secano y de seis mil en regadío. El consejo rector aprobó repartir el excedente entre las socias en proporción a las entregas, reservar una parte para renovar la maquinaria de la planta de selección y dejar el resto en el fondo de garantía. La cooperativa agrícola del este cerró el ejercicio con una cosecha de trigo y cebada por encima de la media de los últimos cinco años, con un rendimiento medio de cuatro mil kilos por hectárea en secano y de seis mil en regadío. El consejo rector aprobó repartir el excedente entre las socias en proporción a las entregas, reservar una parte para renovar la maquinaria de la planta de selección y dejar el resto en el fondo de garantía.] })] <el-cuerpo-4>

#pagebreak()

// p5
#place(top + left, dx: 20mm, dy: 20mm)[#block(width: 170mm, { set text(font: "Inter", size: 18pt, fill: rgb("#1F2733")); set par(leading: 0.65em); align(left)[#strong[Sección 5]] })] <el-titulo-5>
#place(top + left, dx: 20mm, dy: 35mm)[#block(width: 170mm, { set text(font: "Inter", size: 11pt, fill: rgb("#1F2733")); set par(leading: 0.65em, justify: true); align(left)[Informe anual, página 5#parbreak();La cooperativa agrícola del este cerró el ejercicio con una cosecha de trigo y cebada por encima de la media de los últimos cinco años, con un rendimiento medio de cuatro mil kilos por hectárea en secano y de seis mil en regadío. El consejo rector aprobó repartir el excedente entre las socias en proporción a las entregas, reservar una parte para renovar la maquinaria de la planta de selección y dejar el resto en el fondo de garantía. La cooperativa agrícola del este cerró el ejercicio con una cosecha de trigo y cebada por encima de la media de los últimos cinco años, con un rendimiento medio de cuatro mil kilos por hectárea en secano y de seis mil en regadío. El consejo rector aprobó repartir el excedente entre las socias en proporción a las entregas, reservar una parte para renovar la maquinaria de la planta de selección y dejar el resto en el fondo de garantía. La cooperativa agrícola del este cerró el ejercicio con una cosecha de trigo y cebada por encima de la media de los últimos cinco años, con un rendimiento medio de cuatro mil kilos por hectárea en secano y de seis mil en regadío. El consejo rector aprobó repartir el excedente entre las socias en proporción a las entregas, reservar una parte para renovar la maquinaria de la planta de selección y dejar el resto en el fondo de garantía. La cooperativa agrícola del este cerró el ejercicio con una cosecha de trigo y cebada por encima de la media de los últimos cinco años, con un rendimiento medio de cuatro mil kilos por hectárea en secano y de seis mil en regadío. El consejo rector aprobó repartir el excedente entre las socias en proporción a las entregas, reservar una parte para renovar la maquinaria de la planta de selección y dejar el resto en el fondo de garantía. La cooperativa agrícola del este cerró el ejercicio con una cosecha de trigo y cebada por encima de la media de los últimos cinco años, con un rendimiento medio de cuatro mil kilos por hectárea en secano y de seis mil en regadío. El consejo rector aprobó repartir el excedente entre las socias en proporción a las entregas, reservar una parte para renovar la maquinaria de la planta de selección y dejar el resto en el fondo de garantía.] })] <el-cuerpo-5>
