crates/galera-core/tests/snapshots/fixtures__formato.snap
---
source: crates/galera-core/tests/fixtures.rs
expression: code
---
// Generado por Galera a partir de document.json.
// No editar a mano: este archivo se reescribe entero en cada compilación.
#set document(title: "Formato por tramos")
#set page(width: 210mm, height: 297mm, margin: 0pt)

// p1
#place(top + left, dx: 20mm, dy: 20mm)[#block(width: 170mm, { set text(font: "Inter", size: 14pt, fill: rgb("#1F2733")); set par(leading: 0.65em); align(left)[Informe #strong[anual] de la #emph[cooperativa], #underline[revisado] y #text(fill: rgb("#B4161B"))[aprobado]#text(fill: rgb("#1A7F4B"))[#underline[#strong[#emph[.]]]] Más en #link("https://typst.app/docs")[#text(fill: rgb("#2563EB"))[#underline[la web]]] o escribe a #link("mailto:hola@example.com")[la cooperativa]] })] <el-mezcla>
#place(top + left, dx: 20mm, dy: 40mm)[#block(width: 170mm, { set text(font: "Inter", size: 11pt, fill: rgb("#1F2733")); set par(leading: 0.65em); align(left)[#strong[Primera línea]#parbreak();#emph[Otro párrafo]] })] <el-saltos>
