crates/galera-core/tests/snapshots/fixtures__informe.snap
---
source: crates/galera-core/tests/fixtures.rs
expression: code
---
// Generado por Galera a partir de document.json.
// No editar a mano: este archivo se reescribe entero en cada compilación.
#set document(title: "Informe anual 2026")
#set page(width: 210mm, height: 297mm, margin: 0pt)

// p1
#place(top + left, dx: 0mm, dy: 0mm)[#rect(width: 210mm, height: 15mm, fill: rgb("#1e40af"), stroke: none)] <el-r1>
#place(top + left, dx: 20mm, dy: 30mm)[#block(width: 170mm, { set text(font: "Inter", size: 28pt, fill: rgb("#1F2733")); set par(leading: 0.65em); align(left)[#strong[Informe anual]] })] <el-t1>
#place(top + left, dx: 20mm, dy: 60mm)[#image("assets/logo.png", width: 80mm)] <el-i1>
#place(top + left, dx: 20mm, dy: 200mm)[#block(width: 170mm, height: 40mm, eval("#table(columns: 2)[A][B]", mode: "markup"))] <el-c1>
